# archi

./: 404.html  AGENTS.md  README.md  index.html  pyproject.toml  scrapy.cfg  search.html
.github/workflows/: pr-preview.yml
advanced_setup_deploy/: index.html
agents_tools/: index.html
api_reference/: index.html
benchmarking/: index.html
cli_reference/: index.html
configuration/: index.html
data/scripts/: crawl.py  functional_utils.py
data_sources/: index.html
developer_guide/: index.html
docs/: mkdocs.yml
docs/docs/: adding_providers.md  benchmarking.md  configuration.md  models_providers.md  quickstart.md  secrets.md  services.md  user_guide.md
examples/agents/: cms-comp-ops.md
examples/benchmarking/benchmarking_configs/: example_conf.yaml  example_conf2.yaml  example_conf3.yaml  example_conf4.yaml
install/: index.html
models_providers/: index.html
quickstart/: index.html
requirements/: requirements-base.txt
scripts/dev/: build_docker_images.sh
search/: search_index.json
services/: index.html
src/archi/providers/: __init__.py  (+3 more)
src/cli/: cli_main.py
src/data_manager/: data_viewer_service.py  scheduler.py
src/utils/: config_access.py  config_service.py  conversation_service.py  sql.py
tests/: conftest.py
tests/http/: offline_router.py  routes_twikis.py
tests/smoke/: init-test.sql  test_integration.py
tests/ui/: chat.spec.ts  data-viewer.spec.ts  upload.spec.ts
tests/unit/: test_catalog_postgres_list_documents.py  test_persistence_service_size_bytes.py  test_postgres_services.py  test_scrapers.py  test_scrapers_resource_adapter.py  test_twiki_parser.py  test_vectorstore_manager_batch_commit.py
troubleshooting/: index.html
user_guide/: index.html
(+76 files in other folders)
