[project]
name = "archi"
version = "1.2.4"
description = "An AI Augmented Research Chat Intelligence (archi)"
requires-python = ">=3.7"
authors = [
    {name="Pietro Lugato", email="pmlugato@mit.edu"},
    {name="Julius Heitkoetter", email="juliush@mit.edu"},
    {name="Tim Kraska", email="kraska@mit.edu"},
    {name="Christoph Paus", email="paus@mit.edu"},
    {name="Matthew Russo", email="mdrusso@mit.edu"},
    {name="Luca Lavezzo", email="lavezzo@mit.edu"},
    {name="Jason Mohoney", email="mohoney@mit.edu"}
]
dependencies = [
    "pyyaml==6.0.1",
    "click==8.1.7",
    "jinja2==3.1.3",
    "requests==2.31.0",
    "podman-compose==1.4.0",
    "python-dotenv>=0.19.0",
    "mkdocs==1.6.1",
    "ipykernel==6.30.1",
    "ipython==8.18.0",
    "matplotlib==3.9.4",
    "pandas==2.3.2",
    "isort==6.0.1",
    "pre-commit>=4",
    "psycopg2-binary==2.9.10"
]

[project.scripts]
archi = "src.cli.cli_main:main"

[tool.setuptools.package-data]
"src.cli" = ["templates/**/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-v --tb=short -m 'not slow'"  
markers = [  
  "slow: marks tests as slow (excluded by default)",
  "routesets(*names): mount predefined HTTP route sets that we want test e.g. twiki (default)"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "requests-mock>=1.11"
]

dev = [
  "watchfiles>=0.21"
]

[project.urls]
"Homepage" = "https://github.com/archi-physics/archi"
